TT#18501 Fix ngcp-panel typo in timeset dialogue
Under Subscribers > Call Forward > Manage Timesets, the label for the
hour period has a typo. Should be "through" instead of "trough". Fix.

Change-Id: Iad07cb3c8ee69cd147e7629f1e551cd69da709ec

--- a/lib/NGCP/Panel/I18N/de.po
+++ b/lib/NGCP/Panel/I18N/de.po
@@ -13366,7 +13366,7 @@ msgid "topright"
 msgstr ""
 
 #: lib/NGCP/Panel/Utils/DbStrings.pm
-msgid "trough"
+msgid "through"
 msgstr "bis inkl."
 
 #: lib/NGCP/Panel/Utils/DbStrings.pm
