--- a/lib/NGCP/Panel/I18N/ru.po
+++ b/lib/NGCP/Panel/I18N/ru.po
@@ -13383,7 +13383,7 @@ msgid "topright"
 msgstr ""
 
 #: lib/NGCP/Panel/Utils/DbStrings.pm
-msgid "trough"
+msgid "through"
 msgstr "через"
 
 #: lib/NGCP/Panel/Utils/DbStrings.pm
