--- a/lib/NGCP/Panel/I18N/es.po
+++ b/lib/NGCP/Panel/I18N/es.po
@@ -6010,7 +6010,7 @@ msgstr ""
 #: lib/NGCP/Panel/Utils/DbStrings.pm
 msgid ""
 "Search for partial match of user-provided number (UPN) to subscriber's  "
-"primary E164 number and aliases. If it mathes, take UPN as valid wihout "
+"primary E164 number and aliases. If it matches, take UPN as valid without "
 "allowed_clis check and copy UPN to network-provided number (NPN)."
 msgstr ""
 "Buscar por una coincidencia parcial del UPN (CLI proporcionado por el "
@@ -6208,12 +6208,12 @@ msgid "Sorry!"
 msgstr "¡Lo sentimos!"
 
 #: share/templates/notfound_page.tt
-msgid "Sorry, an error has occured, Requested page not found!"
+msgid "Sorry, an error has occurred, Requested page not found!"
 msgstr ""
 "Lo sentimos, se ha producido un error, página solicitada no encontrada!"
 
 #: share/templates/denied_page.tt
-msgid "Sorry, an error has occured, requested operation denied!"
+msgid "Sorry, an error has occurred, requested operation denied!"
 msgstr "Lo sentimos, se ha producido un error, operación solicitada denegada!"
 
 #: share/templates/customer/details.tt share/templates/sound/list.tt
@@ -7496,7 +7496,7 @@ msgid "Vouchers"
 msgstr ""
 
 #: share/templates/error_page.tt
-msgid "We are terribly sorry, an exceptional error has occured:"
+msgid "We are terribly sorry, an exceptional error has occurred:"
 msgstr "Lo sentimos, ha ocurrido un error:"
 
 #: share/templates/widgets/subscriber_topmenu_settings.tt
@@ -8822,7 +8822,7 @@ msgstr "sí"
 #~ msgstr "through"
 
 #~ msgid ""
-#~ "where e-mail notifications are sent, a list of e-mail addreses separated "
+#~ "where e-mail notifications are sent, a list of e-mail addresses separated "
 #~ "by comma"
 #~ msgstr ""
 #~ "lista de direcciones de correo separadas por coma a las que enviar "
