--- a/lib/NGCP/Panel/I18N/es.po
+++ b/lib/NGCP/Panel/I18N/es.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: I 18N\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2017-02-20 14:08+0200\n"
+"PO-Revision-Date: 2020-01-29 23:12+0100\n"
 "Last-Translator: Victor Seva <vseva@sipwise.com>\n"
 "Language-Team: Spanish; Castilian <>\n"
 "Language: es\n"
@@ -5165,8 +5165,8 @@ msgid "Language for voicemail and app server"
 msgstr ""
 
 #: lib/NGCP/Panel/Controller/Security.pm
-msgid "Last Attemp"
-msgstr ""
+msgid "Last Attempt"
+msgstr "Último intento"
 
 #: lib/NGCP/Panel/Controller/Contact.pm lib/NGCP/Panel/Controller/Reseller.pm
 msgid "Last Name"
@@ -5951,7 +5951,7 @@ msgid "Openvpn details"
 msgstr ""
 
 #: lib/NGCP/Panel/Utils/Admin.pm
-msgid "Openvpn service is not avaialbe on the system."
+msgid "Openvpn service is not available on the system."
 msgstr ""
 
 #: lib/NGCP/Panel/Utils/Admin.pm
@@ -9464,9 +9464,6 @@ msgstr "sí"
 
 #~ msgid "Match Direction"
 #~ msgstr "Coincidir dirección"
-
-#~ msgid "Last Attempt"
-#~ msgstr "Último intento"
 
 #, fuzzy
 #~ msgid "Cash"
