--- a/lib/NGCP/Panel/I18N/fr.po
+++ b/lib/NGCP/Panel/I18N/fr.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: SIPWISE FR PO\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2019-02-22 11:16+0100\n"
+"PO-Revision-Date: 2020-01-29 23:12+0100\n"
 "Last-Translator: Juan ABREU <juan.abreu@dauphinteleom.com>\n"
 "Language-Team: LANGUAGE FR <sysadmin@dtfibre.fr>\n"
 "Language: fr_FR\n"
@@ -5362,7 +5362,7 @@ msgid "Language for voicemail and app server"
 msgstr "Langue pour la boite vocale et le serveur d'application"
 
 #: lib/NGCP/Panel/Controller/Security.pm
-msgid "Last Attemp"
+msgid "Last Attempt"
 msgstr "Dernier essai"
 
 #: lib/NGCP/Panel/Controller/Contact.pm lib/NGCP/Panel/Controller/Reseller.pm
@@ -6170,7 +6170,7 @@ msgid "Openvpn details"
 msgstr ""
 
 #: lib/NGCP/Panel/Utils/Admin.pm
-msgid "Openvpn service is not avaialbe on the system."
+msgid "Openvpn service is not available on the system."
 msgstr ""
 
 #: lib/NGCP/Panel/Utils/Admin.pm
