--- a/lib/NGCP/Panel/I18N/ru.po
+++ b/lib/NGCP/Panel/I18N/ru.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: I 18N\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2014-07-08 11:45+0100\n"
+"PO-Revision-Date: 2020-01-29 23:12+0100\n"
 "Last-Translator: Alexander Lutay <alutay@sipwise.com>\n"
 "Language-Team: Russian\n"
 "Language: ru\n"
@@ -5169,8 +5169,8 @@ msgid "Language for voicemail and app server"
 msgstr ""
 
 #: lib/NGCP/Panel/Controller/Security.pm
-msgid "Last Attemp"
-msgstr ""
+msgid "Last Attempt"
+msgstr "Последняя попытка"
 
 #: lib/NGCP/Panel/Controller/Contact.pm lib/NGCP/Panel/Controller/Reseller.pm
 msgid "Last Name"
@@ -5955,7 +5955,7 @@ msgid "Openvpn details"
 msgstr ""
 
 #: lib/NGCP/Panel/Utils/Admin.pm
-msgid "Openvpn service is not avaialbe on the system."
+msgid "Openvpn service is not available on the system."
 msgstr ""
 
 #: lib/NGCP/Panel/Utils/Admin.pm
@@ -9473,9 +9473,6 @@ msgstr "да"
 
 #~ msgid "Match Direction"
 #~ msgstr "Соответствовать направлению"
-
-#~ msgid "Last Attempt"
-#~ msgstr "Последняя попытка"
 
 #~ msgid "Cash"
 #~ msgstr "Наличность"
